# JERonimo

./: .gitignore  CMakeList.cmake  CMakeLists.txt  CodeStyle.md  ControlInterfaces.h  DESIGN.md  Doxyfile  FindSDL2_image.cmake  GameControl.h  GameUtilities.h  Makefile  Makefile.am  Makefile.in  OpenSurfTest  Point.cpp  Point.h  PointTest  PointTest.cpp  README.md  SDLWrappers.h  SimpleSurfTest  Space2D.h  SurfaceX.h  VectorTest  VelocityTest  cmakeConfig.h  config.h.in  configure  configure.ac  design.txt  libtool
ControlInterfaces/: BaseRunnable.cpp  BaseRunnable.h  CMakeLists.txt  CompositeImplementation.h  CompositeRunnable.cpp  CompositeRunnable.h  ControlInterfaceDesign.txt  ControlInterfaces.cpp  ControlInterfaces.dia  DataManager.h  Declarations.h  DisplayQueue.h  Displayable.h  Drawable.h  FileLoadable.h  FileManager.cpp  FileManager.h  GameList.h  GameLoop.cpp  GameLoop.h  ListElements.h  Loadable.h  LoopEngine.h  Loopable.cpp  Loopable.h  MapList.h  PriorityElements.h  Renderable.h  Runnable.cpp  Runnable.h  SortList.h
Entity/: CMakeLists.txt  Entity.h  Sprite2D.cpp  Sprite2D.h
GameControl/: App.cpp  App.h  CMakeLists.txt  DataManager.cpp  DataManager.h  Declarations.h  Events.cpp  Events.h  GameControl.h  GameLoop.cpp  GameLoop.h  Loadable.h  Loopable.h  Makefile.am  Renderable.h  TestEvents.cpp  TestEvents.h
GameUtilities/: CMakeLists.txt  Collidable.cpp  Collidable.h  CollidableShapes.cpp  CollidableShapes.h  Entity.cpp  Entity.h  FPSManager.cpp  FPSManager.h  PhysicalEntity.cpp  PhysicalEntity.h  PhysicalObject.cpp  PhysicalObject.h  PhysicsEngine.cpp  PhysicsEngine.h  StaticObject.cpp  StaticObject.h  collision_design.txt
SDLWrappers/: App.cpp  App.h  Blittable.h  CMakeLists.txt  CanvasRenderer.h  Declarations.h  Drawable.h  EventLogger.cpp  EventLogger.h  Events.cpp  Events.h  HardRenderer.cpp  HardRenderer.h  Keyboard.cpp  Keyboard.h  Logger.cpp  Logger.h  Mouse.cpp  Mouse.h  RenderDisplays.cpp  RenderDisplays.h  Renderer.cpp  Renderer.h  SDLWrappers.cpp  ScaledSurface.cpp  ScaledSurface.h  ScaledTexture.h  Surface.cpp  Surface.h  TestEvents.cpp  Texture.cpp  Texture.h  Window.cpp  Window.h  eventDesign.txt  rendererDesign.txt
Space2D/: CMakeLists.txt  Declarations.cpp  Declarations.h  Delta.h  Makefile.am  Point.cpp  Point.h  Space2D.cpp  Space2D.h  Vector.cpp  Vector.h  Velocity.cpp  Velocity.h
SurfaceX/: .DoubleSurf.h.kate-swp  CMakeLists.txt  CanvasSurf.cpp  CanvasSurf.h  Declarations.h  DoubleSurf.cpp  DoubleSurf.h  JustASurf.cpp  JustASurf.h  OpenSurf.cpp  OpenSurf.h  SafeSurf.cpp  SafeSurf.h  SimpleSurf.cpp  SimpleSurf.h  StaticSurf.cpp  StaticSurf.h  SurfaceX.cpp  SurfaceX.h  VolatileSurf.h
test/ControlInterfaces/: BaseRunnableTest.cpp  CompositeRunnableTest.cpp  DataManagerTest.cpp  FileManagerTest.cpp  GameLoopTest.cpp  LoopEngineTest  LoopEngineTest.cpp  RunnableTest.cpp
test/GameControl/: GameLoopTest.cpp  TestEventsTest.cpp
test/GameUtilities/: BorderPhysicsEngineTest.cpp  CollidableTest.cpp  FPSManagerTest.cpp  PhysicalEntityTest.cpp  PhysicsEngineTest.cpp  StaticObjectEngieTest.cpp
test/SDLWrappers/: AppTest.cpp  CanvasRendererTest.cpp  DrawOverRendererTest.cpp  EventLoggerTest.cpp  HardRendererTest.cpp  LoggerTest.cpp  PaintTest.cpp  RedrawRendererTest.cpp  ScaledTextureTest.cpp  StampTest.cpp  TextureTest.cpp  WindowTest.cpp
test/Space2D/: DeltaTest.cpp  PointTest  PointTest.cpp  Space2DTest.h  VectorTest.cpp  VelocityTest.cpp
test/Space2D/.libs/: PointTest
test/SurfaceX/: DoubleSurfTest.cpp  OpenSurfTest.cpp  SimpleSurfTest.cpp
